testData/src/error/InterfaceExample.kt
/*
 * ©2009-2018 南京擎盾信息科技有限公司 All rights reserved.
 */
package error

interface InterfaceExample {

  fun test()

  fun test(text: String)

  fun test(text: String, text2: String): String

}

